maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:11: error: ':' expected but ')' found.
  def isDirectionFree(dir):Boolean = {
                         ^PledgeMaze:45: error: identifier expected but '}' found.
} 
^